# toga-view

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
tests/: test.archive.py  test.load.py  test.parse.py  test.transpile.py  test_origin.ui.json  test_origin.ui.xml  test_origin_archive.ui.json  test_origin_archive.ui.xml  test_origin_json.py  test_origin_transpile.ui.json  test_origin_transpile.ui.xml  test_origin_xml.py  test_widget.py
toga_view/: __init__.py  __main__.py  exceptions.py  inspector.py
toga_view/archivers/: __init__.py  json_archiver.py  xml_archiver.py
toga_view/parsers/: __init__.py  json_parser.py  xml_parser.py
